# news-crawler

./: .env  .env.example  .gitignore  pyproject.toml  test_config.py  test_db.py  test_logger.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: news.py  router.py
app/core/: config.py  database.py  logger.py
app/models/: __init__.py  news.py
app/repositories/: __init__.py  news_repository.py
app/schemas/: __init__.py  news.py
app/services/: __init__.py  crawler_service.py  news_service.py
